Add sub-menu Service

--- a/jade/scss/_home.scss
+++ b/jade/scss/_home.scss
@@ -45,7 +45,7 @@
     }
     .bx-pager {
       top: 75%;
-      right: 27.7%;
+      right: 25.7%;
       text-align: right;
       .bx-pager-item {
         text-align: center;
@@ -88,7 +88,7 @@
           }
           
         }
-        a {
+        p {
           padding: 55px 0 40px 0;
           text-align: center;
           background-color: $black;
