--- a/jade/scss/_bxslider.scss
+++ b/jade/scss/_bxslider.scss
@@ -56,7 +56,7 @@
 
 .bx-wrapper .bx-loading {
   min-height: 50px;
-  background: url(img/bx_loader.gif) center center no-repeat #fff;
+//  background: url(img/bx_loader.gif) center center no-repeat #fff;
   height: 100%;
   width: 100%;
   position: absolute;
@@ -84,7 +84,7 @@
 }
 
 .bx-wrapper .bx-pager.bx-default-pager a {
-  background: #fff;
+  background: $blue;
   text-indent: -9999px;
   display: block;
   width: 10px;
@@ -98,19 +98,19 @@
 
 .bx-wrapper .bx-pager.bx-default-pager a:hover,
 .bx-wrapper .bx-pager.bx-default-pager a.active {
-  background: $blue;
+  background: $white;
 }
 
 /* DIRECTION CONTROLS (NEXT / PREV) */
 
 .bx-wrapper .bx-prev {
   left: 10px;
-  background: url(img/controls.png) no-repeat 0 -32px;
+//  background: url(img/controls.png) no-repeat 0 -32px;
 }
 
 .bx-wrapper .bx-next {
   right: 10px;
-  background: url(img/controls.png) no-repeat -43px -32px;
+//  background: url(img/controls.png) no-repeat -43px -32px;
 }
 
 .bx-wrapper .bx-prev:hover {
@@ -148,7 +148,7 @@
   width: 10px;
   height: 11px;
   outline: 0;
-  background: url(img/controls.png) -86px -11px no-repeat;
+//  background: url(img/controls.png) -86px -11px no-repeat;
   margin: 0 3px;
 }
 
@@ -163,7 +163,7 @@
   width: 9px;
   height: 11px;
   outline: 0;
-  background: url(img/controls.png) -86px -44px no-repeat;
+//  background: url(img/controls.png) -86px -44px no-repeat;
   margin: 0 3px;
 }
 
