--- a/jade/layout.jade
+++ b/jade/layout.jade
@@ -16,7 +16,7 @@ html(lang='en')
 
 
 
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type='text/javascript')
+    script(src="js/jquery.min.js" type='text/javascript')
     script(src='js/jquery.bxslider.min.js' type='text/javascript')
     script(src='js/bootstrap.min.js' type='text/javascript')
     script(src='js/jquery.slicknav.min.js' type='text/javascript')
