fixe some issues

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -83,27 +83,28 @@ block main
               li: a(href="")
                 i.iconsp-35-phone-white
             a.phone-mobile(href=""): i.iconsp-35-phone-black
-      ul.main-bxslider
-        li
-          img(src="images/slide-1.jpg" height="730")
-          .title
-            h3 able to evolve with new design concepts and modern trends.
-            span Giving the client the opportunity to capture customers with ease.
-        li
-          img(src="images/slide-2.jpg" height="730")
-          .title
-            h3 able to evolve with new design concepts and modern trends.
-            span Giving the client the opportunity to capture customers with ease.
-        li
-          img(src="images/slide-3.jpg" height="730")
-          .title
-            h3 able to evolve with new design concepts and modern trends.
-            span Giving the client the opportunity to capture customers with ease.
-        li
-          img(src="images/slide-4.jpg" height="730")
-          .title
-            h3 able to evolve with new design concepts and modern trends.
-            span Giving the client the opportunity to capture customers with ease.
+      .wrapper-main-bxslider
+        ul.main-bxslider
+          li
+            img(src="images/slide-1.jpg" height="730")
+            .title
+              h3 able to evolve with new design concepts and modern trends.
+              span Giving the client the opportunity to capture customers with ease.
+          li
+            img(src="images/slide-2.jpg" height="730")
+            .title
+              h3 able to evolve with new design concepts and modern trends.
+              span Giving the client the opportunity to capture customers with ease.
+          li
+            img(src="images/slide-3.jpg" height="730")
+            .title
+              h3 able to evolve with new design concepts and modern trends.
+              span Giving the client the opportunity to capture customers with ease.
+          li
+            img(src="images/slide-4.jpg" height="730")
+            .title
+              h3 able to evolve with new design concepts and modern trends.
+              span Giving the client the opportunity to capture customers with ease.
     .services
       .container
         h1.title services
@@ -237,14 +238,14 @@ block main
               .content
                 p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
                 h4.company pasiri's
-                span Eatwood
+                span Eastwood
             div
               a(href="").logo-image
                 img(src="images/testimonials-logo-1.jpg")
               .content
                 p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
                 h4.company pasiri's
-                span Eatwood
+                span Eastwood
           li
             div
               a(href="").logo-image(style="padding-top: 24px;")
@@ -259,7 +260,7 @@ block main
               .content
                 p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
                 h4.company garlos pies
-                span Eatwood
+                span Eastwood
           li
             div
               a(href="").logo-image
@@ -267,14 +268,14 @@ block main
               .content
                 p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
                 h4.company pasiri's
-                span Eatwood
+                span Eastwood
             div
               a(href="").logo-image
                 img(src="images/testimonials-logo-3.jpg")
               .content
                 p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
                 h4.company garlos pies
-                span Eatwood
+                span Eastwood
     .footer
       .container
         ul
@@ -286,18 +287,18 @@ block main
             span All rights reserved.
           li
             span Designed by Openseed
-    button.btn.btn-primary.btn-lg(type='button', data-toggle='modal', data-target='#myModal')
-    #myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
-      .modal-dialog
-        .modal-content
-          .modal-header
-            button.close(type='button', data-dismiss='modal', aria-label='Close')
-              span(aria-hidden='true') &times;
-            h4#myModalLabel.modal-title Modal title
-          .modal-body
-          .modal-footer
-            button.btn.btn-default(type='button', data-dismiss='modal') Close
-            button.btn.btn-primary(type='button') Save changes
+    //button.btn.btn-primary.btn-lg(type='button', data-toggle='modal', data-target='#myModal')
+    //#myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+    //  .modal-dialog
+    //    .modal-content
+    //      .modal-header
+    //        button.close(type='button', data-dismiss='modal', aria-label='Close')
+    //          span(aria-hidden='true') &times;
+    //        h4#myModalLabel.modal-title Modal title
+    //      .modal-body
+    //      .modal-footer
+    //        button.btn.btn-default(type='button', data-dismiss='modal') Close
+    //        button.btn.btn-primary(type='button') Save changes
 
 
 
