--- a/jade/scss/_common.scss
+++ b/jade/scss/_common.scss
@@ -7,8 +7,8 @@ body {
   font-family: $proxima_nova_light;
   font-size: 16px;
   -webkit-text-size-adjust: 100%;
-  width: 1218px;
-  margin: 0 auto;
+//  width: 1218px;
+//  margin: 0 auto;
 }
 img {
   width: 100%;
