--- a/jade/scss/_responsive.scss
+++ b/jade/scss/_responsive.scss
@@ -2,9 +2,16 @@
   body {
     width: 100%;
   }
+  .wrapper-main-bxslider{
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 1199px) and (min-width: 0px){
+  ul.services-list {
+    width: 300px;
+    margin: 0 auto;
+  }
   .slicknav_menu {
     display: block;
     position: relative;
@@ -101,9 +108,10 @@
           width: 111px;
           float: none;
           padding: 11px 8px;
-          left: 35%;
           top: -54px;
           z-index: 1;
+          display: block;
+          margin: 0 auto;
           &:after {
             border-right: 55px solid transparent;
             border-left: 55px solid transparent;
