--- a/html/scss/style.css
+++ b/html/scss/style.css
@@ -768,11 +768,12 @@ select {
   /* line 3, ../../jade/scss/_home.scss */
   .home-page .header {
     z-index: 1;
-    position: relative; }
-  /* line 8, ../../jade/scss/_home.scss */
+    position: fixed;
+    width: 100%; }
+  /* line 9, ../../jade/scss/_home.scss */
   .home-page .slider li {
     position: relative; }
-    /* line 10, ../../jade/scss/_home.scss */
+    /* line 11, ../../jade/scss/_home.scss */
     .home-page .slider li .title {
       position: absolute;
       bottom: 7.5%;
@@ -781,7 +782,7 @@ select {
       background-color: rgba(0, 0, 0, 0.6);
       padding: 50px 145px 95px 42px;
       width: 520px; }
-      /* line 18, ../../jade/scss/_home.scss */
+      /* line 19, ../../jade/scss/_home.scss */
       .home-page .slider li .title:after {
         position: absolute;
         content: "";
@@ -791,38 +792,38 @@ select {
         border-right: 56px solid rgba(0, 0, 0, 0.6);
         left: -56px;
         top: 0px; }
-      /* line 28, ../../jade/scss/_home.scss */
+      /* line 29, ../../jade/scss/_home.scss */
       .home-page .slider li .title h3 {
         font-family: "proxima_nova_extrabold";
         font-size: 25px;
         text-transform: uppercase;
         line-height: 33px;
         letter-spacing: 2px; }
-      /* line 35, ../../jade/scss/_home.scss */
+      /* line 36, ../../jade/scss/_home.scss */
       .home-page .slider li .title span {
         display: block;
         font-family: "roboto_condensed_regular";
         line-height: 25.5px;
         font-size: 16px; }
-  /* line 43, ../../jade/scss/_home.scss */
+  /* line 44, ../../jade/scss/_home.scss */
   .home-page .slider .bx-wrapper {
     top: -70px; }
-  /* line 46, ../../jade/scss/_home.scss */
+  /* line 47, ../../jade/scss/_home.scss */
   .home-page .slider .bx-pager {
     bottom: 15%;
     right: 25.7%;
     text-align: right; }
-    /* line 50, ../../jade/scss/_home.scss */
+    /* line 51, ../../jade/scss/_home.scss */
     .home-page .slider .bx-pager .bx-pager-item {
       text-align: center;
       margin-right: 16px; }
-  /* line 56, ../../jade/scss/_home.scss */
+  /* line 57, ../../jade/scss/_home.scss */
   .home-page .services {
     margin-top: -16px; }
-    /* line 58, ../../jade/scss/_home.scss */
+    /* line 59, ../../jade/scss/_home.scss */
     .home-page .services .services-list {
       margin-top: 62px; }
-      /* line 60, ../../jade/scss/_home.scss */
+      /* line 61, ../../jade/scss/_home.scss */
       .home-page .services .services-list li {
         background-image: url("img/bg-blue.png");
         display: inline-block;
@@ -830,7 +831,7 @@ select {
         margin-right: 20px;
         vertical-align: top;
         border: 0; }
-        /* line 67, ../../jade/scss/_home.scss */
+        /* line 68, ../../jade/scss/_home.scss */
         .home-page .services .services-list li h4.sub-title {
           text-align: center;
           text-transform: uppercase;
@@ -839,11 +840,11 @@ select {
           display: table;
           width: 100%;
           position: relative; }
-          /* line 75, ../../jade/scss/_home.scss */
+          /* line 76, ../../jade/scss/_home.scss */
           .home-page .services .services-list li h4.sub-title span {
             display: table-cell;
             vertical-align: middle; }
-          /* line 79, ../../jade/scss/_home.scss */
+          /* line 80, ../../jade/scss/_home.scss */
           .home-page .services .services-list li h4.sub-title .traingle {
             position: absolute;
             background-image: url("../images/traingle.png");
@@ -854,29 +855,29 @@ select {
             z-index: 9;
             background-size: 100%;
             left: 0; }
-        /* line 92, ../../jade/scss/_home.scss */
+        /* line 93, ../../jade/scss/_home.scss */
         .home-page .services .services-list li p {
           padding: 55px 0 40px 0;
           text-align: center;
           background-color: #171a1c;
           display: block; }
-        /* line 98, ../../jade/scss/_home.scss */
+        /* line 99, ../../jade/scss/_home.scss */
         .home-page .services .services-list li .name-list {
           padding: 70px 23px;
           position: relative; }
-          /* line 101, ../../jade/scss/_home.scss */
+          /* line 102, ../../jade/scss/_home.scss */
           .home-page .services .services-list li .name-list li {
             display: block;
             width: 100%;
             font-family: "proxima_nova_light"; }
-            /* line 105, ../../jade/scss/_home.scss */
+            /* line 106, ../../jade/scss/_home.scss */
             .home-page .services .services-list li .name-list li span {
               display: inline-block;
               width: 86%;
               line-height: 30px;
               vertical-align: middle;
               letter-spacing: 1px; }
-            /* line 112, ../../jade/scss/_home.scss */
+            /* line 113, ../../jade/scss/_home.scss */
             .home-page .services .services-list li .name-list li .dot {
               display: inline-block;
               font-size: 45px;
@@ -885,7 +886,7 @@ select {
               height: 24px;
               margin-top: -5px;
               margin-right: 4px; }
-          /* line 122, ../../jade/scss/_home.scss */
+          /* line 123, ../../jade/scss/_home.scss */
           .home-page .services .services-list li .name-list:before {
             position: absolute;
             content: "";
@@ -895,54 +896,54 @@ select {
             border-bottom: 11px solid #1ca5d7;
             left: 44%;
             top: -11px; }
-        /* line 133, ../../jade/scss/_home.scss */
+        /* line 134, ../../jade/scss/_home.scss */
         .home-page .services .services-list li:last-child {
           margin-right: 0; }
-  /* line 139, ../../jade/scss/_home.scss */
+  /* line 140, ../../jade/scss/_home.scss */
   .home-page .why-choose {
     background-image: url("img/bg-blue.png");
     margin-top: 336px;
     position: relative; }
-    /* line 143, ../../jade/scss/_home.scss */
+    /* line 144, ../../jade/scss/_home.scss */
     .home-page .why-choose .background-before {
       position: absolute;
       top: -280px;
       left: 0;
       width: 100%;
       height: 280px; }
-    /* line 150, ../../jade/scss/_home.scss */
+    /* line 151, ../../jade/scss/_home.scss */
     .home-page .why-choose .background-after {
       position: absolute;
       bottom: -143px;
       left: 0;
       width: 100%;
       height: 143px; }
-    /* line 157, ../../jade/scss/_home.scss */
+    /* line 158, ../../jade/scss/_home.scss */
     .home-page .why-choose h1.title {
       margin: 40px 0  62px 0;
       padding: 0 250px; }
-    /* line 162, ../../jade/scss/_home.scss */
+    /* line 163, ../../jade/scss/_home.scss */
     .home-page .why-choose ul li {
       border: 1px solid #bae4f3;
       padding: 40px 56px;
       margin-right: 5%;
       width: 30%; }
-      /* line 167, ../../jade/scss/_home.scss */
+      /* line 168, ../../jade/scss/_home.scss */
       .home-page .why-choose ul li:last-child {
         margin-right: 0; }
-      /* line 170, ../../jade/scss/_home.scss */
+      /* line 171, ../../jade/scss/_home.scss */
       .home-page .why-choose ul li h3.sub-title {
         text-align: center;
         text-transform: uppercase;
         margin-bottom: 20px;
         font-family: "roboto_condensed_bold";
         text-shadow: 1px 0 4px rgba(0, 0, 0, 0.4); }
-      /* line 177, ../../jade/scss/_home.scss */
+      /* line 178, ../../jade/scss/_home.scss */
       .home-page .why-choose ul li span {
         font-size: 20px;
         text-align: justify;
         line-height: 25px; }
-    /* line 184, ../../jade/scss/_home.scss */
+    /* line 185, ../../jade/scss/_home.scss */
     .home-page .why-choose a.read-more {
       text-align: center;
       background: #171a1c;
@@ -957,7 +958,7 @@ select {
       font-family: "roboto_condensed_regular";
       word-spacing: 2px;
       letter-spacing: 0px; }
-      /* line 198, ../../jade/scss/_home.scss */
+      /* line 199, ../../jade/scss/_home.scss */
       .home-page .why-choose a.read-more:after {
         position: absolute;
         content: "";
@@ -967,28 +968,28 @@ select {
         border-bottom: 12px solid #171a1c;
         left: 0;
         top: -12px; }
-  /* line 210, ../../jade/scss/_home.scss */
+  /* line 211, ../../jade/scss/_home.scss */
   .home-page .testimonials {
     margin-bottom: 180px; }
-    /* line 212, ../../jade/scss/_home.scss */
+    /* line 213, ../../jade/scss/_home.scss */
     .home-page .testimonials h1.title {
       margin: 210px 0 58px 0; }
-    /* line 215, ../../jade/scss/_home.scss */
+    /* line 216, ../../jade/scss/_home.scss */
     .home-page .testimonials .bx-wrapper .bx-pager.bx-default-pager a {
       width: 16px;
       height: 16px;
       -moz-border-radius: 8px;
       -webkit-border-radius: 8px;
       border-radius: 8px; }
-    /* line 222, ../../jade/scss/_home.scss */
+    /* line 223, ../../jade/scss/_home.scss */
     .home-page .testimonials ul {
       font-size: 16.26px;
       color: black; }
-      /* line 226, ../../jade/scss/_home.scss */
+      /* line 227, ../../jade/scss/_home.scss */
       .home-page .testimonials ul li > div {
         margin-bottom: 30px;
         display: table; }
-      /* line 230, ../../jade/scss/_home.scss */
+      /* line 231, ../../jade/scss/_home.scss */
       .home-page .testimonials ul li .logo-image {
         width: 220px;
         height: 220px;
@@ -997,12 +998,12 @@ select {
         vertical-align: middle;
         background-color: #fff;
         position: relative; }
-        /* line 238, ../../jade/scss/_home.scss */
+        /* line 239, ../../jade/scss/_home.scss */
         .home-page .testimonials ul li .logo-image img {
           width: auto;
           height: auto;
           margin: 0 auto; }
-        /* line 243, ../../jade/scss/_home.scss */
+        /* line 244, ../../jade/scss/_home.scss */
         .home-page .testimonials ul li .logo-image:after {
           position: absolute;
           content: "";
@@ -1013,7 +1014,7 @@ select {
           right: -10px;
           top: 45%;
           z-index: 1; }
-      /* line 255, ../../jade/scss/_home.scss */
+      /* line 256, ../../jade/scss/_home.scss */
       .home-page .testimonials ul li .content {
         display: table-cell;
         width: 77%;
@@ -1021,51 +1022,51 @@ select {
         position: relative;
         vertical-align: top;
         padding: 0 70px; }
-        /* line 262, ../../jade/scss/_home.scss */
+        /* line 263, ../../jade/scss/_home.scss */
         .home-page .testimonials ul li .content i {
           zoom: 1.1;
           position: absolute;
           bottom: 84px;
           right: 78px; }
-          /* line 267, ../../jade/scss/_home.scss */
+          /* line 268, ../../jade/scss/_home.scss */
           .home-page .testimonials ul li .content i:first-child {
             top: 37px;
             left: 54px; }
-        /* line 272, ../../jade/scss/_home.scss */
+        /* line 273, ../../jade/scss/_home.scss */
         .home-page .testimonials ul li .content p {
           line-height: 24.39px;
           margin: 48px 0px 20px 0px;
           position: relative; }
-          /* line 276, ../../jade/scss/_home.scss */
+          /* line 277, ../../jade/scss/_home.scss */
           .home-page .testimonials ul li .content p:before {
             content: url("img/quoteopen.png");
             position: absolute;
             width: 0px;
             left: -10px;
             top: 0; }
-          /* line 283, ../../jade/scss/_home.scss */
+          /* line 284, ../../jade/scss/_home.scss */
           .home-page .testimonials ul li .content p:after {
             content: url("img/quoteclose.png");
             position: absolute;
             width: 0px;
             right: 40px;
             bottom: -4px; }
-        /* line 291, ../../jade/scss/_home.scss */
+        /* line 292, ../../jade/scss/_home.scss */
         .home-page .testimonials ul li .content h4.company {
           text-transform: uppercase;
           font-family: "proxima_nova_bold";
           margin-bottom: 4px; }
-        /* line 296, ../../jade/scss/_home.scss */
+        /* line 297, ../../jade/scss/_home.scss */
         .home-page .testimonials ul li .content span {
           font-family: "roboto_condensed_light"; }
-    /* line 302, ../../jade/scss/_home.scss */
+    /* line 303, ../../jade/scss/_home.scss */
     .home-page .testimonials .bx-pager {
       bottom: -40px; }
-    /* line 305, ../../jade/scss/_home.scss */
+    /* line 306, ../../jade/scss/_home.scss */
     .home-page .testimonials .bx-pager-item {
       margin: 0 10px; }
 
-/* line 310, ../../jade/scss/_home.scss */
+/* line 311, ../../jade/scss/_home.scss */
 .wrapper-main-bxslider {
   width: 1218px;
   margin: 0 auto; }
