--- a/html/scss/style.css
+++ b/html/scss/style.css
@@ -211,6 +211,12 @@ select {
   font-weight: normal;
   font-style: normal; }
 @font-face {
+  font-family: "proxima_nova_regular";
+  src: url("fonts//ProximaNova-Regular.eot");
+  src: url("fonts//ProximaNova-Regular.eot?#iefix") format("embedded-opentype"), url("fonts//ProximaNova-Regular.woff") format("woff"), url("fonts//ProximaNova-Regular.ttf") format("truetype"), url("fonts//ProximaNova-Regular.svg#proxima_nova_regular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
   font-family: "roboto_condensed_regular";
   src: url("fonts//RobotoCondensed-Regular.eot");
   src: url("fonts//RobotoCondensed-Regular.eot?#iefix") format("embedded-opentype"), url("fonts//RobotoCondensed-Regular.woff") format("woff"), url("fonts//RobotoCondensed-Regular.ttf") format("truetype"), url("fonts//RobotoCondensed-Regular.svg#roboto_condensed_regular") format("svg");
@@ -625,9 +631,9 @@ select {
       position: absolute;
       background-image: url("../images/traingle.png");
       background-repeat: no-repeat;
-      height: 12px;
+      height: 14px;
       width: 100%;
-      bottom: -12px;
+      bottom: -14px;
       z-index: 9;
       background-size: 100%;
       left: 0; }
@@ -716,40 +722,163 @@ select {
       position: absolute;
       width: 100%;
       top: 100%;
-      left: 0;
-      background-image: url("img/bg-gray.png"); }
-/* line 137, ../../jade/scss/_layout.scss */
+      left: 7px;
+      background-image: url("img/bg-gray.png");
+      padding: 54px 118px; }
+      /* line 135, ../../jade/scss/_layout.scss */
+      .page .header .enquire .box-enquire .title {
+        font-size: 32.52px;
+        font-family: "proxima_nova_extrabold";
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        word-spacing: 1px; }
+      /* line 142, ../../jade/scss/_layout.scss */
+      .page .header .enquire .box-enquire .box-left {
+        width: 26%; }
+      /* line 145, ../../jade/scss/_layout.scss */
+      .page .header .enquire .box-enquire .box-center {
+        margin: 0 2%;
+        width: 44%; }
+      /* line 149, ../../jade/scss/_layout.scss */
+      .page .header .enquire .box-enquire .form-control {
+        border-radius: 0;
+        padding: 5px 20px;
+        font-size: 16px;
+        font-family: "proxima_nova_regular";
+        color: #343434; }
+      /* line 156, ../../jade/scss/_layout.scss */
+      .page .header .enquire .box-enquire .select-style {
+        background: url(img/btn-dropdown.png) no-repeat 94% #fff;
+        display: inline-block;
+        overflow: hidden;
+        vertical-align: middle;
+        height: 30px;
+        width: 100%;
+        border: 1px solid #ccc;
+        outline: 0; }
+        /* line 165, ../../jade/scss/_layout.scss */
+        .page .header .enquire .box-enquire .select-style:focus {
+          border-color: #66afe9;
+          outline: 0;
+          -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6); }
+        /* line 171, ../../jade/scss/_layout.scss */
+        .page .header .enquire .box-enquire .select-style select {
+          height: 100%;
+          width: 100%;
+          background: transparent;
+          border-radius: 0;
+          background: transparent;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          padding: 5px 14px;
+          font-size: 16px;
+          font-family: "proxima_nova_regular";
+          color: #343434;
+          -webkit-box-shadow: inset 0px 2px 5px -2px #a8a5a8;
+          -moz-box-shadow: inset 0px 2px 5px -2px #a8a5a8;
+          box-shadow: inset 0px 2px 5px -2px #a8a5a8; }
+      /* line 188, ../../jade/scss/_layout.scss */
+      .page .header .enquire .box-enquire input {
+        height: 30px;
+        -webkit-box-shadow: inset 0px 2px 5px -2px #a8a5a8;
+        -moz-box-shadow: inset 0px 2px 5px -2px #a8a5a8;
+        box-shadow: inset 0px 2px 5px -2px #a8a5a8; }
+      /* line 194, ../../jade/scss/_layout.scss */
+      .page .header .enquire .box-enquire textarea {
+        height: 108px;
+        -webkit-box-shadow: inset 0px 2px 5px -2px #a8a5a8;
+        -moz-box-shadow: inset 0px 2px 5px -2px #a8a5a8;
+        box-shadow: inset 0px 2px 5px -2px #a8a5a8; }
+      /* line 200, ../../jade/scss/_layout.scss */
+      .page .header .enquire .box-enquire ::-webkit-input-placeholder {
+        font-size: 16px;
+        font-family: "proxima_nova_regular";
+        color: #343434; }
+      /* line 206, ../../jade/scss/_layout.scss */
+      .page .header .enquire .box-enquire :-moz-placeholder {
+        font-size: 16px;
+        font-family: "proxima_nova_regular";
+        color: #343434; }
+      /* line 212, ../../jade/scss/_layout.scss */
+      .page .header .enquire .box-enquire ::-moz-placeholder {
+        font-size: 16px;
+        font-family: "proxima_nova_regular";
+        color: #343434; }
+      /* line 218, ../../jade/scss/_layout.scss */
+      .page .header .enquire .box-enquire :-ms-input-placeholder {
+        font-size: 16px;
+        font-family: "proxima_nova_regular";
+        color: #343434; }
+    /* line 224, ../../jade/scss/_layout.scss */
+    .page .header .enquire .btn {
+      border-radius: 0;
+      background: #ffffff;
+      width: 150px;
+      display: block;
+      margin-bottom: 18px;
+      height: 40px;
+      -webkit-box-shadow: 0px 1px 4px 0px #8f8d8f;
+      -moz-box-shadow: 0px 1px 4px 0px #8f8d8f;
+      box-shadow: 0px 1px 4px 0px #8f8d8f;
+      border: 0.5px solid #dcdcdc;
+      text-transform: uppercase;
+      color: #343434;
+      font-family: "roboto_condensed_regular";
+      font-size: 16px; }
+      /* line 239, ../../jade/scss/_layout.scss */
+      .page .header .enquire .btn:focus {
+        outline: none; }
+      /* line 242, ../../jade/scss/_layout.scss */
+      .page .header .enquire .btn.btn-submit {
+        background: #1ca5d7;
+        color: #ffffff;
+        font-family: "roboto_condensed_bold";
+        font-size: 18px;
+        letter-spacing: 1px;
+        position: relative; }
+        /* line 249, ../../jade/scss/_layout.scss */
+        .page .header .enquire .btn.btn-submit:after {
+          position: absolute;
+          content: "";
+          width: 0px;
+          border-right: 75px solid transparent;
+          border-left: 75px solid transparent;
+          border-top: 12px solid #1ca5d7;
+          left: 0;
+          bottom: -12px; }
+/* line 263, ../../jade/scss/_layout.scss */
 .page .footer {
   background-color: black; }
-  /* line 139, ../../jade/scss/_layout.scss */
+  /* line 265, ../../jade/scss/_layout.scss */
   .page .footer i {
     background-color: #ffffff;
     vertical-align: middle;
     margin-right: 40px; }
-  /* line 144, ../../jade/scss/_layout.scss */
+  /* line 270, ../../jade/scss/_layout.scss */
   .page .footer ul {
     position: relative;
     font-family: "roboto_condensed_bold";
     font-size: 16.26px; }
-    /* line 148, ../../jade/scss/_layout.scss */
+    /* line 274, ../../jade/scss/_layout.scss */
     .page .footer ul li {
       text-align: center;
       padding: 24px 0 36px 0;
       vertical-align: top; }
-      /* line 152, ../../jade/scss/_layout.scss */
+      /* line 278, ../../jade/scss/_layout.scss */
       .page .footer ul li:nth-child(1) {
         position: absolute;
         left: 0;
         top: -9px; }
-      /* line 157, ../../jade/scss/_layout.scss */
+      /* line 283, ../../jade/scss/_layout.scss */
       .page .footer ul li:nth-child(3) {
         position: absolute;
         right: 0;
         top: 0; }
-      /* line 163, ../../jade/scss/_layout.scss */
+      /* line 289, ../../jade/scss/_layout.scss */
       .page .footer ul li:nth-child(2) span:last-child {
         margin-left: 6px; }
-/* line 170, ../../jade/scss/_layout.scss */
+/* line 296, ../../jade/scss/_layout.scss */
 .page h1.title {
   text-transform: uppercase;
   font-family: "proxima_nova_extrabold";
