--- a/jade/scss/_layout.scss
+++ b/jade/scss/_layout.scss
@@ -38,9 +38,9 @@
         position: absolute;
         background-image: url("../images/traingle.png");
         background-repeat: no-repeat;
-        height: 12px;
+        height: 14px;
         width: 100%;
-        bottom: -12px;
+        bottom: -14px;
         z-index: 9;
         background-size: 100%;
         left: 0;
@@ -129,8 +129,134 @@
         position: absolute;
         width: 100%;
         top: 100%;
-        left: 0;
+        left: 7px;
         background-image: url("img/bg-gray.png");
+        padding: 54px 118px;
+        .title {
+          font-size: 32.52px;
+          font-family: $proxima_nova_extrabold;
+          text-transform: uppercase;
+          letter-spacing: 1px;
+          word-spacing: 1px;
+        }
+        .box-left {
+          width: 26%;
+        }
+        .box-center {
+          margin: 0 2%;
+          width: 44%;
+        }
+        .form-control {
+          border-radius: 0;
+          padding: 5px 20px;
+          font-size: 16px;
+          font-family: $proxima_nova_regular;
+          color: #343434;
+        }
+        .select-style {
+          background: url(img/btn-dropdown.png) no-repeat 94% #fff;
+          display: inline-block;
+          overflow: hidden;
+          vertical-align: middle;
+          height: 30px;
+          width: 100%;
+          border: 1px solid #ccc;
+          outline: 0;
+          &:focus {
+            border-color: #66afe9;
+            outline: 0;
+            -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
+            box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
+          }
+          select {
+            height: 100%;
+            width: 100%;
+            background: transparent;
+            border-radius: 0;
+            background: transparent;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            padding: 5px 14px;
+            font-size: 16px;
+            font-family: $proxima_nova_regular;
+            color: #343434;
+            -webkit-box-shadow: inset 0px 2px 5px -2px rgba(168,165,168,1);
+            -moz-box-shadow: inset 0px 2px 5px -2px rgba(168,165,168,1);
+            box-shadow: inset 0px 2px 5px -2px rgba(168,165,168,1);
+          }
+        }
+        input {
+          height: 30px;
+          -webkit-box-shadow: inset 0px 2px 5px -2px rgba(168,165,168,1);
+          -moz-box-shadow: inset 0px 2px 5px -2px rgba(168,165,168,1);
+          box-shadow: inset 0px 2px 5px -2px rgba(168,165,168,1);
+        }
+        textarea {
+          height: 108px;
+          -webkit-box-shadow: inset 0px 2px 5px -2px rgba(168,165,168,1);
+          -moz-box-shadow: inset 0px 2px 5px -2px rgba(168,165,168,1);
+          box-shadow: inset 0px 2px 5px -2px rgba(168,165,168,1);
+        }
+        ::-webkit-input-placeholder {
+          font-size: 16px;
+          font-family: $proxima_nova_regular;
+          color: #343434;
+        }
+
+        :-moz-placeholder {
+          font-size: 16px;
+          font-family: $proxima_nova_regular;
+          color: #343434;
+        }
+
+        ::-moz-placeholder {
+          font-size: 16px;
+          font-family: $proxima_nova_regular;
+          color: #343434;
+        }
+
+        :-ms-input-placeholder {
+          font-size: 16px;
+          font-family: $proxima_nova_regular;
+          color: #343434;
+        }
+      }
+      .btn {
+        border-radius: 0;
+        background: $white;
+        width: 150px;
+        display: block;
+        margin-bottom: 18px;
+        height: 40px;
+        -webkit-box-shadow: 0px 1px 4px 0px rgba(143,141,143,1);
+        -moz-box-shadow: 0px 1px 4px 0px rgba(143,141,143,1);
+        box-shadow: 0px 1px 4px 0px rgba(143,141,143,1);
+        border: 0.5px solid #dcdcdc;
+        text-transform: uppercase;
+        color: #343434;
+        font-family: $roboto_condensed_regular;
+        font-size: 16px;
+        &:focus {
+          outline: none;
+        }
+        &.btn-submit {
+          background: $blue;
+          color: $white;
+          font-family: $roboto_condensed_bold;
+          font-size: 18px;
+          letter-spacing: 1px;
+          position: relative;
+          &:after {
+            position: absolute;
+            content: "";
+            width: 0px;
+            border-right: 75px solid transparent;
+            border-left: 75px solid transparent;
+            border-top: 12px solid $blue;
+            left: 0;
+            bottom: -12px;
+          }
+        }
       }
     }
   }
