--- a/jade/scss/_variables.scss
+++ b/jade/scss/_variables.scss
@@ -3,6 +3,7 @@ $fontPath: 'fonts/';
 $proxima_nova_bold: 'proxima_nova_bold';
 $proxima_nova_extrabold: 'proxima_nova_extrabold';
 $proxima_nova_light: 'proxima_nova_light';
+$proxima_nova_regular: 'proxima_nova_regular';
 $roboto_condensed_bold: 'roboto_condensed_bold';
 $roboto_condensed_light: 'roboto_condensed_light';
 $roboto_condensed_regular: 'roboto_condensed_regular';
