change span to p

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -217,13 +217,13 @@ block main
         ul.row
           li.col-md-4
             h3.sub-title experience
-            span Benefit 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+            p Benefit 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
           li.col-md-4
             h3.sub-title quality
-            span Benefit 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+            p Benefit 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
           li.col-md-4
             h3.sub-title modern
-            span Benefit 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+            p Benefit 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
         a(href="").read-more read more about us
       .background-after
         img(src="images/after-why-choose.png" height="143")
