--- a/jade/scss/_home.scss
+++ b/jade/scss/_home.scss
@@ -176,7 +176,7 @@
           font-family: $roboto_condensed_bold;
           text-shadow: 1px 0 4px rgba(0,0,0,0.4);
         }
-        span {
+        p {
           font-size: 20px;
           text-align: justify;
           line-height: 25px;
