--- a/html/scss/style.css
+++ b/html/scss/style.css
@@ -940,7 +940,7 @@ select {
         font-family: "roboto_condensed_bold";
         text-shadow: 1px 0 4px rgba(0, 0, 0, 0.4); }
       /* line 179, ../../jade/scss/_home.scss */
-      .home-page .why-choose ul li span {
+      .home-page .why-choose ul li p {
         font-size: 20px;
         text-align: justify;
         line-height: 25px; }
