Convert HTML/CSS for Service page with Desktop version (80%)

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -14,9 +14,9 @@ block main
               span 4/450 West Botany Street, Rockdale NSW, 2216
             ul.menu
               li
-                a(href="") about
+                a(href="about.html") about
               li.service-hover
-                a(href="") services
+                a(href="services.html") services
                 ul.sub-menu
                   li: a.scroll(href="stainless-steel-fabrication.html") stainless steel fabrication
                   li: a.scroll(href="refrigeration.html") refrigeration
@@ -67,7 +67,7 @@ block main
           li
             a.scroll(href="about.html") about
           li
-            a.scroll(href="") services
+            a.scroll(href="services.html") services
             ul
               li: a.scroll(href="") stainless steel fabrication
               li: a.scroll(href="") refrigeration
@@ -299,18 +299,6 @@ block main
             span All rights reserved.
           li
             span Designed by Openseed
-    //button.btn.btn-primary.btn-lg(type='button', data-toggle='modal', data-target='#myModal')
-    //#myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
-    //  .modal-dialog
-    //    .modal-content
-    //      .modal-header
-    //        button.close(type='button', data-dismiss='modal', aria-label='Close')
-    //          span(aria-hidden='true') &times;
-    //        h4#myModalLabel.modal-title Modal title
-    //      .modal-body
-    //      .modal-footer
-    //        button.btn.btn-default(type='button', data-dismiss='modal') Close
-    //        button.btn.btn-primary(type='button') Save changes
 
 
 
