--- a/html/scss/style.css
+++ b/html/scss/style.css
@@ -1201,6 +1201,140 @@ select {
   width: 1218px;
   margin: 0 auto; }
 
+/* line 3, ../../jade/scss/_services.scss */
+.services-page .services h1.title {
+  margin: 55px 0 57px 0; }
+/* line 6, ../../jade/scss/_services.scss */
+.services-page .services .services-list {
+  margin-bottom: 60px; }
+  /* line 8, ../../jade/scss/_services.scss */
+  .services-page .services .services-list li {
+    background: #1ca5d7;
+    display: inline-block;
+    width: 18%;
+    margin-right: 20px;
+    vertical-align: top;
+    border: 0;
+    margin-left: 0;
+    position: relative; }
+    /* line 18, ../../jade/scss/_services.scss */
+    .services-page .services .services-list li.active .traingle {
+      position: absolute;
+      background-image: url("../images/traingle-gray.png");
+      background-repeat: no-repeat;
+      height: 20px;
+      width: 100%;
+      bottom: -20px;
+      z-index: 9;
+      background-size: 100%;
+      left: 0; }
+    /* line 29, ../../jade/scss/_services.scss */
+    .services-page .services .services-list li.active a {
+      background-image: url(img/bg-gray.png);
+      color: #1ca5d7; }
+    /* line 34, ../../jade/scss/_services.scss */
+    .services-page .services .services-list li a {
+      padding: 0;
+      border-radius: 0; }
+      /* line 37, ../../jade/scss/_services.scss */
+      .services-page .services .services-list li a:hover {
+        background-image: url(img/bg-gray.png);
+        color: #1ca5d7; }
+    /* line 42, ../../jade/scss/_services.scss */
+    .services-page .services .services-list li:last-child {
+      margin-right: 0; }
+  /* line 46, ../../jade/scss/_services.scss */
+  .services-page .services .services-list h4.sub-title {
+    text-align: center;
+    text-transform: uppercase;
+    font-family: "roboto_condensed_bold";
+    height: 64px;
+    display: table;
+    width: 100%;
+    position: relative; }
+    /* line 54, ../../jade/scss/_services.scss */
+    .services-page .services .services-list h4.sub-title span {
+      display: table-cell;
+      vertical-align: middle; }
+/* line 60, ../../jade/scss/_services.scss */
+.services-page .services .services-list-content > .tab-pane.active {
+  display: inline-block;
+  color: #171a1c;
+  background: #ffffff;
+  padding: 40px 24px; }
+  /* line 68, ../../jade/scss/_services.scss */
+  .services-page .services .services-list-content > .tab-pane.active ul li.active a {
+    background-image: url("img/bg-gray.png");
+    color: #1ca5d7; }
+  /* line 73, ../../jade/scss/_services.scss */
+  .services-page .services .services-list-content > .tab-pane.active ul li a {
+    padding: 15px 0px;
+    display: inline-block;
+    color: #ffffff;
+    background: #1ca5d7;
+    text-transform: uppercase;
+    font-size: 17.89px;
+    font-family: "roboto_condensed_bold";
+    letter-spacing: 0.5px;
+    border-radius: 0;
+    box-shadow: 1px 2px 1px #ccc;
+    margin-bottom: 10px;
+    width: 172px;
+    text-align: center; }
+  /* line 91, ../../jade/scss/_services.scss */
+  .services-page .services .services-list-content > .tab-pane.active .tab-content .dot {
+    display: inline-block;
+    font-size: 80px;
+    line-height: 0;
+    width: 10px;
+    height: 24px;
+    margin-top: -12px;
+    margin-right: 10px;
+    vertical-align: top; }
+  /* line 101, ../../jade/scss/_services.scss */
+  .services-page .services .services-list-content > .tab-pane.active .tab-content p {
+    display: inline-block;
+    width: 85%;
+    font-size: 17.89px;
+    font-family: "proxima_nova_light";
+    line-height: 25.56px;
+    letter-spacing: 0;
+    color: black; }
+  /* line 112, ../../jade/scss/_services.scss */
+  .services-page .services .services-list-content > .tab-pane.active .tab-content .tab-pane.active ul li {
+    margin-bottom: 25px; }
+  /* line 118, ../../jade/scss/_services.scss */
+  .services-page .services .services-list-content > .tab-pane.active .tab-content .image-content .carousel-indicators {
+    bottom: 2px !important;
+    left: 77%; }
+    /* line 121, ../../jade/scss/_services.scss */
+    .services-page .services .services-list-content > .tab-pane.active .tab-content .image-content .carousel-indicators li {
+      height: 16px;
+      width: 16px;
+      border-radius: 10px;
+      background: #1ca5d7;
+      border: none;
+      margin: 16px; }
+      /* line 128, ../../jade/scss/_services.scss */
+      .services-page .services .services-list-content > .tab-pane.active .tab-content .image-content .carousel-indicators li.active {
+        background: #ffffff; }
+  /* line 133, ../../jade/scss/_services.scss */
+  .services-page .services .services-list-content > .tab-pane.active .tab-content .image-content .carousel-caption {
+    left: 0;
+    width: 100%;
+    bottom: 0;
+    padding: 14px 0 24px 22px;
+    text-align: left;
+    font-size: 15.33px;
+    color: #ffffff;
+    font-family: "roboto_condensed_bold";
+    background-color: rgba(0, 0, 0, 0.6); }
+    /* line 143, ../../jade/scss/_services.scss */
+    .services-page .services .services-list-content > .tab-pane.active .tab-content .image-content .carousel-caption span {
+      display: block;
+      font-family: "roboto_condensed_light";
+      margin-top: 2px; }
+
 @media only screen and (max-width: 1217px) {
   /* line 2, ../../jade/scss/_responsive.scss */
   body {
